--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="10dp"
         android:text="TextView"
-        android:textAlignment="textStart"
+        android:textAlignment="gravity"
         android:textSize="14sp"
         android:textStyle="bold" />
 
